--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 data
 recognition/models
-recognition/trainer/results/*/
+trainer/results/*/
 trained_models
 .idea
 # Byte-compiled / optimized / DLL files
